// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PreviewGrid render PreviewGrid loading 1`] = `
<div>
  <div
    class="preview-grid"
  >
    <span
      class=""
    >
      <i
        aria-hidden="true"
        class="fa fa-spinner fa-pulse"
      />
       
      Loading...
    </span>
  </div>
</div>
`;

exports[`PreviewGrid render PreviewGrid with data 1`] = `
<div>
  <div
    class="preview-grid"
  >
    <p>
      Previewing first 3 rows and 4 of 5 columns.
    </p>
    <div
      class="table-responsive"
    >
      <div
        class="grid-messages"
      />
      <table
        class="table table-striped table-bordered"
      >
        <thead>
          <tr>
            <th
              class="grid-header-cell"
              data-fieldkey="Name"
              draggable="false"
              id="Name"
              title="Contains a short name for this data object
If not provided, a unique name will be generated from the expression:
null (Name)"
            >
              Name
            </th>
            <th
              class="grid-header-cell"
              data-fieldkey="Flag"
              draggable="false"
              id="Flag"
              title="Contains a reference to a user-editable comment about this row (Flag)"
            >
              Flag
            </th>
            <th
              class="grid-header-cell"
              data-fieldkey="mixtureTypeId"
              draggable="false"
              id="mixtureTypeId"
              title="mixtureTypeId"
            >
              Mixture Type
            </th>
            <th
              class="grid-header-cell"
              data-fieldkey="expirationTime"
              draggable="false"
              id="expirationTime"
              title="The expiration period in days. (expirationTime)"
            >
              Expiration Time
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="grid-row-alternate"
          >
            <td
              style="text-align: left;"
            >
              <a
                class="ws-pre-wrap"
                href="/labkey/testContainer/experiment-showData.view?rowId=41426"
              >
                DMEXP
              </a>
            </td>
            <td
              style="text-align: left;"
            >
              <span
                class="ws-pre-wrap"
              />
            </td>
            <td
              style="text-align: left;"
            >
              <a
                class="ws-pre-wrap"
                href="/labkey/testContainer/list-details.view?listId=15&pk=2"
              >
                Solution
              </a>
            </td>
            <td
              style="text-align: right;"
            >
              <span
                class="ws-pre-wrap"
              >
                30
              </span>
            </td>
          </tr>
          <tr
            class="grid-row"
          >
            <td
              style="text-align: left;"
            >
              <a
                class="ws-pre-wrap"
                href="/labkey/testContainer/experiment-showData.view?rowId=41425"
              >
                TBS
              </a>
            </td>
            <td
              style="text-align: left;"
            >
              <span
                class="ws-pre-wrap"
              />
            </td>
            <td
              style="text-align: left;"
            >
              <a
                class="ws-pre-wrap"
                href="/labkey/testContainer/list-details.view?listId=15&pk=2"
              >
                Solution
              </a>
            </td>
            <td
              style="text-align: right;"
            >
              <span
                class="ws-pre-wrap"
              >
                30
              </span>
            </td>
          </tr>
          <tr
            class="grid-row-alternate"
          >
            <td
              style="text-align: left;"
            >
              <a
                class="ws-pre-wrap"
                href="/labkey/testContainer/experiment-showData.view?rowId=41424"
              >
                PBS
              </a>
            </td>
            <td
              style="text-align: left;"
            >
              <span
                class="ws-pre-wrap"
              />
            </td>
            <td
              style="text-align: left;"
            >
              <a
                class="ws-pre-wrap"
                href="/labkey/testContainer/list-details.view?listId=15&pk=2"
              >
                Solution
              </a>
            </td>
            <td
              style="text-align: right;"
            >
              <span
                class="ws-pre-wrap"
              >
                30
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`PreviewGrid render PreviewGrid with different numCols and numRows 1`] = `
<div>
  <div
    class="preview-grid"
  >
    <p>
      Previewing first 2 rows and 2 of 5 columns.
    </p>
    <div
      class="table-responsive"
    >
      <div
        class="grid-messages"
      />
      <table
        class="table table-striped table-bordered"
      >
        <thead>
          <tr>
            <th
              class="grid-header-cell"
              data-fieldkey="Name"
              draggable="false"
              id="Name"
              title="Contains a short name for this data object
If not provided, a unique name will be generated from the expression:
null (Name)"
            >
              Name
            </th>
            <th
              class="grid-header-cell"
              data-fieldkey="Flag"
              draggable="false"
              id="Flag"
              title="Contains a reference to a user-editable comment about this row (Flag)"
            >
              Flag
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="grid-row-alternate"
          >
            <td
              style="text-align: left;"
            >
              <a
                class="ws-pre-wrap"
                href="/labkey/testContainer/experiment-showData.view?rowId=41426"
              >
                DMEXP
              </a>
            </td>
            <td
              style="text-align: left;"
            >
              <span
                class="ws-pre-wrap"
              />
            </td>
          </tr>
          <tr
            class="grid-row"
          >
            <td
              style="text-align: left;"
            >
              <a
                class="ws-pre-wrap"
                href="/labkey/testContainer/experiment-showData.view?rowId=41425"
              >
                TBS
              </a>
            </td>
            <td
              style="text-align: left;"
            >
              <span
                class="ws-pre-wrap"
              />
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
